--- a/css/styles.css
+++ b/css/styles.css
@@ -111,7 +111,7 @@ body {
   margin: calc(-1 * var(--indent) / 2);
 }
 
-.card-set-item {
+.card-set__item {
   flex-basis: calc((100% - var(--indent) * var(--items)) / var(--items));
   margin: calc(var(--indent) / 2);
 }
@@ -125,18 +125,62 @@ body {
   border-bottom: 1px solid var(--border-bottom-header-color);
 }
 
-.header-container {
+.header__box {
   display: flex;
   align-items: center;
 }
 
-.header-nav {
+/*================================= Navigation */
+.nav {
   display: flex;
   font-weight: 500;
   letter-spacing: 0.02em;
 }
 
-.header-logo {
+.nav__list {
+  display: flex;
+  align-items: center;
+}
+
+.nav__link {
+  color: var(--title-text-color);
+}
+
+.nav__link:hover,
+.nav__link:focus {
+  color: var(--accent-color);
+}
+
+.nav__link.current {
+  color: var(--accent-color);
+}
+
+.nav__item:not(:last-child) {
+  margin-right: 50px;
+}
+
+.nav__link {
+  position: relative;
+  display: flex;
+  align-items: center;
+  padding: 32px 0 31px 0;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.nav__link.current::after {
+  position: absolute;
+  content: '';
+  bottom: -1px;
+  left: 0;
+  width: 100%;
+  height: 4px;
+  background-color: var(--accent-color);
+  border-radius: 2px;
+}
+
+/*======================================= LOGO */
+.logo {
   display: flex;
   align-items: center;
   margin-right: 93px;
@@ -147,49 +191,8 @@ body {
   color: var(--primary-logo-color);
 }
 
-.header-logo .accent {
+.logo__accent {
   color: var(--accent-color);
-}
-
-.header-nav-list {
-  display: flex;
-  align-items: center;
-}
-.header-nav-list .header-nav-link {
-  color: var(--title-text-color);
-}
-
-.header-nav-list .header-nav-link:hover,
-.header-nav-list .header-nav-link:focus {
-  color: var(--accent-color);
-}
-
-.header-nav-list .header-nav-link.current {
-  color: var(--accent-color);
-}
-
-.header-nav-item:not(:last-child) {
-  margin-right: 50px;
-}
-
-.header-nav-link {
-  position: relative;
-  display: flex;
-  align-items: center;
-  padding: 32px 0 31px 0;
-
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.header-nav-link.current::after {
-  position: absolute;
-  content: '';
-  bottom: -1px;
-  left: 0;
-  width: 100%;
-  height: 4px;
-  background-color: var(--accent-color);
-  border-radius: 2px;
 }
 
 .contact {
@@ -240,7 +243,7 @@ body {
   background-position: center;
 }
 
-.hero-title {
+.hero__title {
   margin: 0 auto;
   margin-bottom: 30px;
   width: 696px;
@@ -282,16 +285,16 @@ body {
   padding-bottom: 0;
 }
 
-.features-list {
+.features__list {
   --items: 4;
 }
 
-.features-list-item {
+.features__item {
   display: block;
   flex-basis: 270px;
 }
 
-.features-list-container {
+.features__box {
   height: 120px;
   margin-bottom: 30px;
   padding: 25px 100px;
@@ -299,7 +302,7 @@ body {
   border-radius: 4px;
 }
 
-.features-list-title {
+.features__title {
   margin-bottom: 10px;
   font-weight: 700;
   font-size: 14px;
@@ -308,12 +311,12 @@ body {
   color: var(--title-text-color);
 }
 
-.features-list-text {
+.features__text {
   line-height: 1.71;
 }
 
 /*================================================= WORKS */
-.works-title {
+.works__title {
   margin-bottom: 50px;
   font-weight: 700;
   font-size: 36px;
@@ -322,17 +325,17 @@ body {
   color: var(--title-text-color);
 }
 
-.works-list {
+.works__list {
   display: flex;
 }
-.works-list-item {
+.works__item {
   position: relative;
 }
-.works-list-item:not(:last-child) {
+.works__item:not(:last-child) {
   margin-right: 30px;
 }
 
-.works-list-text {
+.works__text {
   position: absolute;
   left: 0;
   bottom: 0;
@@ -354,7 +357,7 @@ body {
   background-color: var(--background-color-secondary);
 }
 
-.team-title {
+.team__title {
   margin-bottom: 50px;
   font-weight: 700;
   font-size: 36px;
@@ -363,7 +366,7 @@ body {
   color: var(--title-text-color);
 }
 
-.team-list-item {
+.team__item {
   --items: 4;
 
   background-color: var(--primary-white-color);
@@ -372,43 +375,41 @@ body {
   border-radius: 0px 0px 4px 4px;
 }
 
-.team-list-title {
+.team__name {
   margin-bottom: 10px;
   color: var(--title-text-color);
   font-weight: 500;
 }
 
-.team-list-title,
-.team-list-text {
+.team__name,
+.team__text {
   font-size: 16px;
   line-height: 1.19;
   text-align: center;
 }
 
-.team-list-text {
+.team__text {
   margin-bottom: 16px;
 }
-.team-list-block {
+
+.team__box {
   padding-top: 30px;
   padding-bottom: 30px;
 }
 
 /*------------------------ Social links */
-.social-container {
-  margin-top: 16px;
-}
 
-.social-list {
+.social__list {
   display: flex;
   align-items: center;
   justify-content: center;
 }
 
-.social-item:not(:last-child) {
+.social__item:not(:last-child) {
   margin-right: 10px;
 }
 
-.social-link {
+.social__link {
   display: flex;
   justify-content: center;
   align-items: center;
@@ -421,18 +422,19 @@ body {
     color 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.social-link:hover {
+.social__link:hover,
+.social__link:focus {
   background-color: var(--accent-color);
   color: var(--primary-white-color);
   transform: scale(1.25);
 }
 
-.social-icon {
+.social__icon {
   fill: currentColor;
 }
 
 /*================================================ CLIENTS */
-.clients-title {
+.clients__title {
   margin-bottom: 50px;
   font-weight: 700;
   font-size: 36px;
@@ -441,11 +443,11 @@ body {
   color: var(--title-text-color);
 }
 
-.clients-item {
+.clients__item {
   --items: 6;
 }
 
-.clients-link {
+.clients__link {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -458,7 +460,8 @@ body {
     border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.clients-link:hover {
+.clients__link:hover,
+.clients__link:focus {
   border-color: var(--accent-color);
   color: var(--accent-color);
   animation: scaler 1500ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -476,16 +479,16 @@ body {
   }
 }
 
-.clients-icon {
+.clients__icon {
   fill: currentColor;
 }
 
 /*============================================== FOOTER */
-.footer-section {
+.footer {
   padding: 60px 0;
   background-color: var(--background-color-footer);
 }
-.footer {
+.footer-box {
   display: flex;
   align-items: baseline;
   justify-content: space-between;
