--- a/css/styles.css
+++ b/css/styles.css
@@ -179,49 +179,57 @@ body {
   border-radius: 2px;
 }
 
-/*======================================= LOGO */
+/*======================================= LOGO ==================================*/
 .logo {
   display: flex;
-  align-items: center;
-  margin-right: 93px;
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.19;
-  color: var(--primary-logo-color);
 }
 
 .logo__accent {
   color: var(--accent-color);
 }
 
+.logo--dark {
+  align-items: center;
+  margin-right: 93px;
+  color: var(--primary-logo-color);
+}
+.logo--light {
+  margin-bottom: 20px;
+  color: var(--primary-white-color);
+}
+
+/*======================================= contact ==================================*/
+
 .contact {
   display: flex;
   margin-left: auto;
 }
 
-.contact-item:not(:last-child) {
+.contact__item:not(:last-child) {
   margin-right: 50px;
 }
 
-.contact-link {
+.contact__link {
   display: flex;
   align-items: center;
   padding-bottom: 31px;
   padding-top: 32px;
   font-weight: 500;
-  letter-spacing: 0.02em;
   color: var(--primary-text-color);
 
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.contact-link:hover,
-.contact-link:focus {
+.contact__link:hover,
+.contact__link:focus {
   color: var(--accent-color);
 }
 
-.contact-icon {
+.contact__icon {
   fill: currentColor;
   margin-right: 10px;
 }
@@ -254,11 +262,14 @@ body {
   text-transform: uppercase;
 }
 
-.hero-button {
-  display: inline-block;
+/*=========================================== BUTTON */
+.btn {
+  display: flex;
+  width: 200px;
+  height: 50px;
   margin: 0 auto;
-  padding: 10px 32px;
   align-items: center;
+  justify-content: center;
   font-family: 'Roboto';
   font-weight: 700;
   font-size: 16px;
@@ -271,13 +282,17 @@ body {
   border: none;
   border-radius: 4px;
   cursor: pointer;
-
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.hero-button:hover,
-.hero-button:focus {
+.btn:hover,
+.btn:focus {
   background-color: var(--btn-hover-color);
+}
+
+.btn__icon {
+  fill: var(--primary-white-color);
+  margin-left: 12px;
 }
 
 /*============================================ FEATURES */
@@ -357,6 +372,11 @@ body {
   background-color: var(--background-color-secondary);
 }
 
+.team__box {
+  padding-top: 30px;
+  padding-bottom: 30px;
+}
+
 .team__title {
   margin-bottom: 50px;
   font-weight: 700;
@@ -375,12 +395,6 @@ body {
   border-radius: 0px 0px 4px 4px;
 }
 
-.team__name {
-  margin-bottom: 10px;
-  color: var(--title-text-color);
-  font-weight: 500;
-}
-
 .team__name,
 .team__text {
   font-size: 16px;
@@ -388,49 +402,14 @@ body {
   text-align: center;
 }
 
+.team__name {
+  margin-bottom: 10px;
+  color: var(--title-text-color);
+  font-weight: 500;
+}
+
 .team__text {
   margin-bottom: 16px;
-}
-
-.team__box {
-  padding-top: 30px;
-  padding-bottom: 30px;
-}
-
-/*------------------------ Social links */
-
-.social__list {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.social__item:not(:last-child) {
-  margin-right: 10px;
-}
-
-.social__link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 44px;
-  height: 44px;
-  color: var(--icon-main-color);
-  border-radius: 50%;
-
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    color 250ms cubic-bezier(0.4, 0, 0.2, 1), transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.social__link:hover,
-.social__link:focus {
-  background-color: var(--accent-color);
-  color: var(--primary-white-color);
-  transform: scale(1.25);
-}
-
-.social__icon {
-  fill: currentColor;
 }
 
 /*================================================ CLIENTS */
@@ -494,47 +473,32 @@ body {
   justify-content: space-between;
 }
 
-.footer-logo {
-  display: inline-block;
+.footer-box__contact {
+  margin-right: 70px;
+}
+
+.footer__title {
   margin-bottom: 20px;
-  font-family: 'Raleway', sans-serif;
   font-weight: 700;
-  font-size: 26px;
-  line-height: 1.19;
+  line-height: 1.14;
+  text-transform: uppercase;
   color: var(--primary-white-color);
 }
 
-.footer-logo .accent {
-  color: var(--accent-color);
-}
-
-.footer-contact-list {
+.footer-contact__list {
   display: inline-block;
   padding-left: 0;
 }
 
-.footer-contact-item {
+.footer-contact__item {
   margin-bottom: 9px;
 }
 
-.footer-contact-item:last-child {
+.footer-contact__item:last-child {
   margin-bottom: 0;
 }
 
-.adress {
-  color: var(--primary-white-color);
-  line-height: 1.71;
-  font-style: normal;
-
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.adress:hover,
-.adress:focus {
-  color: var(--accent-color);
-}
-
-.footer-contact-link {
+.footer-contact__link {
   color: var(--color-text-footer);
   line-height: 1.71;
   font-style: normal;
@@ -542,73 +506,20 @@ body {
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-contact-link:hover,
-.footer-contact-link:focus {
+.footer-contact__link--adress {
+  color: var(--primary-white-color);
+}
+
+.footer-contact__link:hover,
+.footer-contact__link:focus {
   color: var(--accent-color);
 }
 
-.footer-social-container {
-  margin-right: auto;
-}
-
-.footer-social-title {
-  margin-bottom: 20px;
-  font-weight: 700;
-  line-height: 1.14;
-  text-transform: uppercase;
-  color: var(--primary-white-color);
-}
-
-.footer-contact-container {
-  margin-right: 70px;
-}
-
-.footer-social-list {
-  display: flex;
-  justify-content: center;
-}
-
-.footer-social-item:not(:last-child) {
-  margin-right: 10px;
-}
-
-.footer-social-link {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  width: 44px;
-  height: 44px;
-  color: var(--primary-white-color);
-  border-radius: 50%;
-  background-color: var(--background-footer-social-color);
-
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
-    transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.footer-social-link:hover,
-.footer-social-link:focus {
-  background-color: var(--accent-color);
-  border-radius: 50%;
-  transform: scale(1.25);
-}
-
-.footer-social-icon {
-  fill: currentColor;
-}
-
-.footer-mail-title {
-  margin-bottom: 20px;
-  font-weight: 700;
-  line-height: 1.14;
-  text-transform: uppercase;
-  color: var(--primary-white-color);
-}
-.footer-form {
+.footer__form {
   display: flex;
 }
 
-.footer-form-field {
+.footer-form__field {
   width: 358px;
   height: 50px;
   margin-right: 12px;
@@ -622,47 +533,16 @@ body {
   border-radius: 4px;
 }
 
-.footer-form-btn {
-  display: inline-flex;
-  width: 200px;
-  height: 50px;
-  align-items: center;
-  justify-content: center;
-  font-family: 'Roboto';
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  text-align: center;
-  letter-spacing: 0.06em;
-  color: var(--primary-white-color);
-  background-color: var(--accent-color);
-  box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.footer-form-btn:hover,
-.footer-form-btn:focus {
-  background-color: var(--btn-hover-color);
-}
-
-.footer-btn-icon {
-  fill: var(--primary-white-color);
-  margin-left: 12px;
-}
-
-/*/////////////////////////////////////////__ PORTFOLIO __////////////////////////////////////////*/
+/*/////////////////////////////////////__ PORTFOLIO __/////////////////////////////////////*/
 
 /*=============================== BUTTONS */
-.portfolio-filter {
+.filter__list {
   display: flex;
   justify-content: center;
   margin-bottom: 50px;
 }
 
-.portfolio-filter-btn {
+.filter__btn {
   padding: 6px 22px;
   font-family: inherit;
   font-weight: 500;
@@ -680,17 +560,17 @@ body {
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.portfolio-filter-item:not(:last-child) {
+.filter__item:not(:last-child) {
   margin-right: 8px;
 }
 
-.portfolio-filter .portfolio-filter-btn.current {
+.filter__btn.current {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
 }
 
-.portfolio-filter-btn:hover,
-.portfolio-filter-btn:focus {
+.filter__btn:hover,
+.filter__btn:focus {
   color: var(--primary-white-color);
   background-color: var(--accent-color);
   box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
@@ -698,27 +578,27 @@ body {
 }
 
 /*==================================== Examples */
-.examples-link {
+.examples__link {
   display: block;
   position: relative;
 
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.examples-link:hover,
-.examples-link:focus {
+.examples__link:hover,
+.examples__link:focus {
   box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
     1px 4px 6px rgba(0, 0, 0, 0.16);
 }
 
-.examples-container {
+.examples__container {
   display: block;
   padding: 20px 24px;
   border: 1px solid var(--border-portf-color);
   border-top: none;
 }
 
-.examples-title {
+.examples__title {
   margin-bottom: 4px;
   font-weight: 700;
   font-size: 18px;
@@ -727,18 +607,18 @@ body {
   color: var(--title-text-color);
 }
 
-.examples-text {
+.examples__text {
   font-size: 16px;
   line-height: 1.88;
   color: var(--primary-text-color);
 }
 
-.examples-img-box {
+.examples__box {
   position: relative;
   overflow: hidden;
 }
 
-.box-overlay {
+.examples--overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -756,8 +636,8 @@ body {
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.examples-link:hover .box-overlay,
-.examples-link:focus .box-overlay {
+.examples__link:hover .examples--overlay,
+.examples__link:focus .examples--overlay {
   transform: translateY(0);
 }
 
@@ -866,34 +746,6 @@ body {
   letter-spacing: 0.01em;
 }
 
-.modal-form-btn {
-  display: flex;
-  width: 200px;
-  height: 50px;
-  margin: 0 auto;
-  padding: 10px 32px;
-  align-items: center;
-  justify-content: center;
-  font-family: 'Roboto';
-  font-weight: 700;
-  font-size: 16px;
-  line-height: 1.88;
-  text-align: center;
-  letter-spacing: 0.06em;
-  color: var(--primary-white-color);
-  background-color: var(--accent-color);
-  box-shadow: 0px 4px 4px rgb(0 0 0 / 15%);
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.modal-form-btn:hover,
-.modal-form-btn:focus {
-  background-color: var(--btn-hover-color);
-}
-
 .modal-form-group {
   position: relative;
   display: flex;
@@ -984,4 +836,65 @@ body {
   background-color: var(--accent-color);
   border-color: transparent;
   border-radius: 50%;
+}
+
+/*================================================== Social links */
+
+.social__list {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.social__item:not(:last-child) {
+  margin-right: 10px;
+}
+
+.social__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+
+  color: var(--icon-main-color);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transform 250ms cubic-bezier(0.4, 0, 0.2, 1), color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.social__link:hover,
+.social__link:focus {
+  background-color: var(--accent-color);
+  transform: scale(1.25);
+
+  color: var(--primary-white-color);
+}
+
+.social__icon {
+  fill: currentColor;
+}
+/* ================================================== */
+.footer-box__social {
+  margin-right: auto;
+}
+.footer-social__link {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+
+  color: var(--primary-white-color);
+
+  background-color: var(--background-footer-social-color);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-social__link:hover,
+.footer-social__link:focus {
+  background-color: var(--accent-color);
+  transform: scale(1.25);
 }
