--- a/sass/components/_buttons.scss
+++ b/sass/components/_buttons.scss
@@ -22,11 +22,39 @@
     &:focus {
       background-color: var(--btn-hover-color);
     }
-    .btn__icon {
+    &__icon {
   fill: var(--primary-white-color);
   margin-left: 12px;
 }
 }
+
+.close-btn {
+  position: absolute;
+  top: 8px;
+  right: 8px;
+  display: flex;
+  width: 30px;
+  height: 30px;
+  justify-content: center;
+  align-items: center;
+  background-color: var(--primary-white-color);
+  border: 1px solid rgba(0, 0, 0, 0.1);
+  border-radius: 50%;
+  cursor: pointer;
+  transition: outline 500ms cubic-bezier(0.4, 0, 0.2, 1);
+    &__icon {
+      background-color: var(--primary-white-color);
+      color: var(--primary-logo-color);
+      transition: fill var(--animation);
+    }
+    &:hover,
+    &:focus {
+      fill: var(--accent-color);
+      outline: 1px solid var(--accent-color);
+    }
+}
+
+
 
 
 
