--- a/sass/layouts/_hero.scss
+++ b/sass/layouts/_hero.scss
@@ -13,15 +13,15 @@
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-}
 
-.hero__title {
-  margin: 0 auto;
-  margin-bottom: 30px;
-  width: 696px;
-  font-weight: 900;
-  font-size: 44px;
-  line-height: 1.36;
-  letter-spacing: 0.06em;
-  text-transform: uppercase;
+    &__title {
+      margin: 0 auto;
+      margin-bottom: 30px;
+      width: 696px;
+      font-weight: 900;
+      font-size: 44px;
+      line-height: 1.36;
+      letter-spacing: 0.06em;
+      text-transform: uppercase;
+    }
 }
